1. Метод .of [#70623 #508406]